--- a/html/help.html
+++ b/html/help.html
@@ -20,6 +20,7 @@
 <link rel="mask-icon" href="../resources/icon/safari-pinned-tab.svg" color="#000000">
 <meta name="msapplication-TileColor" content="#ffffff">
 <meta name="theme-color" content="#ffffff">
+<script src="https://kit.fontawesome.com/e9b2e2d0cb.js" crossorigin="anonymous"></script>
   </head>
   <body>
 
@@ -33,9 +34,9 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ml-auto mt-2 mt-lg-0  align-items-center col-sm-12">
-        <li class="nav-item active col-sm-6">
-          <a class="nav-link home-link" href="index.html"> <img src="../resources/icon/favicon.ico" height="42" width="42" > People-Analytics Wiki <span class="sr-only">(current)</span></a>
+      <ul class="navbar-nav ml-auto mt-2 mt-lg-0  align-items-center col-sm-12" style="padding-left: 0;">
+        <li class="nav-item active col-sm-6" style="padding-left: 0;">
+          <a class="nav-link home-link" href="index.html" style="padding-left: 0;"> <img src="../resources/icon/favicon.ico" height="42" width="42" style="padding-left: 0;"> People-Analytics Wiki <span class="sr-only">(current)</span></a>
         </li>
 
         <li class="pull-right col-sm-6 align-self-center">
