--- a/help.html
+++ b/help.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="datatables/datatables.css">
     <link rel="stylesheet" href="css/main.css">
     <!--<link rel="stylesheet" href="https://cdn.datatables.net/1.10.20/css/jquery.dataTables.min.css">-->
-    <script type="text/javascript" src="../datatables/jQuery-3.3.1/jquery-3.3.1.js"></script>
-    <script type="text/javascript" src="../datatables/datatables.js"></script>
-    <script type="text/javascript" src="../js/main.js"></script>
+    <script type="text/javascript" src="datatables/jQuery-3.3.1/jquery-3.3.1.js"></script>
+    <script type="text/javascript" src="datatables/datatables.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
     <link rel="apple-touch-icon" sizes="180x180" href="resources/icon//apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="resources/icon/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="resources/icon/favicon-16x16.png">
@@ -36,7 +36,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto mt-2 mt-lg-0  align-items-center col-sm-12" style="padding-left: 0;">
         <li class="nav-item active col-sm-6" style="padding-left: 0;">
-          <a class="nav-link home-link" href="index.html" style="padding-left: 0;"> <img src="../resources/icon/favicon.ico" height="42" width="42" style="padding-left: 0;"> People-Analytics Wiki <span class="sr-only">(current)</span></a>
+          <a class="nav-link home-link" href="index.html" style="padding-left: 0;"> <img src="resources/icon/favicon.ico" height="42" width="42" style="padding-left: 0;"> People-Analytics Wiki <span class="sr-only">(current)</span></a>
         </li>
 
         <li class="pull-right col-sm-6 align-self-center">
